<resources>
    <string name="online_lahei_24">24-hour blackout</string>
    <string name="online_save">preservation</string>
    <string name="online_save_success">Saved successfully</string>
    <string name="online_save_error">Save failed</string>
    <string name="online_remark">remarks</string>
    <string name="online_remark_max_length">Remarks cannot exceed 200 words</string>
    <string name="online_edit_and_send">Send after editing</string>
    <string name="online_no_can_empty">Cannot be empty</string>
    <string name="online_pop_retract">withdraw</string>
    <string name="custom_retracted_msg_tip">A message was withdrawn</string>
    <string name="online_retract_error">Withdrawal failed</string>
    <string name="online_city">city</string>
    <string name="online_summary_status">Process state</string>
    <string name="online_user_no_transfer">This customer cannot be transferred</string>
    <string name="sobot_order_status_2">To be delivered</string>
    <string name="sobot_order_status_1">To be paid</string>
    <string name="sobot_order_status_6">To be evaluated</string>
    <string name="sobot_message_online">Online</string>
    <string name="online_current_no_network">Network error, please check the network and try again</string>
    <string name="online_phone">Telephone</string>
    <string name="online_click_look_msg">Click to view the message</string>
    <string name="sobot_order_code_lable">Order Number</string>
    <string name="sobot_order_status_lable">Order status</string>
    <string name="online_partnerId">Docking ID</string>
    <string name="sobot_online_send">Send</string>
    <string name="online_cant_no_overtime">Messages that take longer than 2 minutes to send. Cannot be withdrawn</string>
    <string name="online_visitor_from">Source of visitors</string>
    <string name="online_visit_info_tab">Accessing info</string>
    <string name="online_fuwenben_biaoshi">Rich text</string>
    <string name="online_fuwu_exception">Server exception, please try again later</string>
    <string name="online_service_summary">Service summary</string>
    <string name="online_pop_copy">copy</string>
    <string name="online_ctrl_v_success">Copy succeeded!</string>
    <string name="custom_retracted_sensitive">The message failed to be sent because it contains sensitive words. Please try to edit it again and send it</string>
    <string name="online_call_back">Call back voice calls to users</string>
    <string name="online_click_ransfer_tips">Customer clicked trans-to-agent service</string>
    <string name="online_company">company</string>
    <string name="online_close">close</string>
    <string name="online_admin_busy">Administrator busy</string>
    <string name="sobot_order_total_money">total</string>
    <string name="online_chat_time">Conversation time</string>
    <string name="sobot_reception_on">In conversation</string>
    <string name="online_rebot_knowledge">Robotic knowledge</string>
    <string name="sobot_keetp_this_select">Remember this choice</string>
    <string name="online_loading">Loading</string>
    <string name="onnline_kicked">The account has been logged in at another end</string>
    <string name="online_create_chat">Establishing a conversation</string>
    <string name="sobot_how_goods">Products</string>
    <string name="online_ba_user">User</string>
    <string name="online_user_to_kefu">Transfer users to agent</string>
    <string name="online_remove_user_black_success">Successful release</string>
    <string name="online_remove_lahei">Remove user blackout</string>
    <string name="online_reception_kefu">Reception and agent</string>
    <string name="online_time_end_cant_exceed_start">The end time cannot be less than the start time</string>
    <string name="sobot_start_reception">Start the reception</string>
    <string name="online_time_start_cant_exceed_end">The start time cannot be greater than the end time</string>
    <string name="online_kefu">agent</string>
    <string name="online_kefu_online">Agent online</string>
    <string name="online_kefu_offline">Agent offline</string>
    <string name="online_kefu_group">customer group</string>
    <string name="online_user_grade">Customer rating</string>
    <string name="online_no_support_evaluate">Client does not support evaluation</string>
    <string name="online_user_info_tab">Customer info</string>
    <string name="online_user_already_lahei">The customer has been blackmailed</string>
    <string name="online_user_already_evaluate">The customer has commented on your service</string>
    <string name="online_cannt_evaluate">Customer has been offline, unable to invite evaluation</string>
    <string name="online_evaluate_need_zixun">The evaluation can only be made after the customer has consulted</string>
    <string name="sobot_kuaijihuifu">Quick reply</string>
    <string name="online_add_user_black_success">Pull black success</string>
    <string name="online_lahei_24_no_rengong">Customers cannot contact online manual agent within 24 hours after blackout</string>
    <string name="online_lahei_user">Blackmail customers</string>
    <string name="online_lahei_reason_no_empty">Blackout reason cannot be empty</string>
    <string name="online_lahei">Blacklist users</string>
    <string name="sobot_file_download">Download now</string>
    <string name="sobot_message_record">Offline</string>
    <string name="online_outline_end_chat">Offline, this session ends</string>
    <string name="online_chat">chat</string>
    <string name="online_busy">be busy</string>
    <string name="online_no_support_withdraw">Message recall is not enabled</string>
    <string name="Sobot_app_nomore_loading">There is no more data</string>
    <string name="online_inside_knowledge">Internal knowledge</string>
    <string name="online_nickname">Nickname</string>
    <string name="onnline_kicked_by_admin">You have been forced to log off by the administrator. Please log in again</string>
    <string name="online_send_evaluate">You have successfully sent a comment invitation to the customer</string>
    <string name="online_msg_no_send_success">You have a message not delivered</string>
    <string name="online_a_new_message">You have a new message</string>
    <string name="online_chat_cover_transfer">Your session with the client has been scrambled by the administrator</string>
    <string name="online_line_up">line up</string>
    <string name="sobot_screen_on">In line</string>
    <string name="sobot_order_status_4">Delivery in progress</string>
    <string name="sobot_bottom_camera_meau">photograph</string>
    <string name="online_common_customers">Customers</string>
    <string name="online_other">other</string>
    <string name="online_enterprise">Public</string>
    <string name="online_change_kefu_status">Switch agent status</string>
    <string name="online_please_submit_service_summary">Please submit the service summary first</string>
    <string name="online_please_input">Please enter</string>
    <string name="online_lahei_reason_hint">Please input the reason for blacking</string>
    <string name="online_change_kefu_status_reason_hint">Please input the switching reason, 50 words can be input</string>
    <string name="online_please_choose">Please select</string>
    <string name="online_select_summary_status">Please select problem status</string>
    <string name="online_summary_select_business">Please select consulting business</string>
    <string name="online_summary_select_business_type">Please select business type</string>
    <string name="sobot_app_per_go_setting">Go to the settings</string>
    <string name="online_cancle">Cancel</string>
    <string name="online_remove_mark">Cancel star</string>
    <string name="online_mark_cancle">Cancel user star</string>
    <string name="online_all">Whole</string>
    <string name="online_all_rebot">All robots</string>
    <string name="online_ok">Confirm</string>
    <string name="online_exit_chat">Are you sure to end this session？</string>
    <string name="online_service_out">Are you sure you want to go offline</string>
    <string name="online_fusion_cloud">Fusion cloud</string>
    <string name="sobot_screen">Filter</string>
    <string name="online_saixuanhuihua">Conversation view</string>
    <string name="online_saixuankehu">Customer view</string>
    <string name="online_upload_vodie_length">Up to 15 seconds video</string>
    <string name="Sobot_app_listview_header_hint_release">Release to refresh immediately</string>
    <string name="online_shipin_biaoshi">video</string>
    <string name="sobot_data_error">data error</string>
    <string name="online_regex_error">Incorrect format</string>
    <string name="online_refresh">Refresh</string>
    <string name="sobot_search">search</string>
    <string name="online_search_keyword">Search keywords</string>
    <string name="online_quick_reply_search">Search quick reply</string>
    <string name="online_search_business_and_type">Search business / business type</string>
    <string name="online_summary_business">Business</string>
    <string name="online_all_reception">All the agent</string>
    <string name="online_success_tip">Submitted successfully</string>
    <string name="online_add_mark">Star mark</string>
    <string name="onnline_time_tianqian">days ago</string>
    <string name="sobot_online_fuwuzongjie">Fill in the summary</string>
    <string name="online_tupian_biaoshi">picture</string>
    <string name="onnline_exit">sign out</string>
    <string name="online_vip_grade">VIP level</string>
    <string name="online_vip_customers">VIP Customers</string>
    <string name="sobot_online_net_error">Network error, please check the network and try again</string>
    <string name="online_unsaturated_count">unsaturated</string>
    <string name="online_micro_blog">micro-blog</string>
    <string name="online_status_no">Unresolved</string>
    <string name="online_wechat">WeChat</string>
    <string name="online_no_mark">Cancel mark</string>
    <string name="online_no_find_msg">No corresponding message was found</string>
    <string name="online_weizhi_biaoshi">position</string>
    <string name="online_no_zongjie">Not sumup</string>
    <string name="online_wenjian_biaoshi">file</string>
    <string name="sobot_file_size">file size</string>
    <string name="sobot_file_preview">File Preview</string>
    <string name="online_my">My</string>
    <string name="online_my_reception">I received it</string>
    <string name="online_invalid_session">invalid session</string>
    <string name="online_invalid_success_tip">Invalid session submitted successfully</string>
    <string name="sobot_order_time_lable">Order time</string>
    <string name="Sobot_app_listview_header_hint_normal">Drop down to refresh</string>
    <string name="online_new_user_online">Introduction of new customers</string>
    <string name="online_mark">Star mark</string>
    <string name="online_mark_status">Is it a star</string>
    <string name="online_name">full name</string>
    <string name="online_select_enterprise">Select company</string>
    <string name="sobot_online_select_status">Select reception status</string>
    <string name="sobot_online_yaoping">Invite comments</string>
    <string name="online_invite">invite</string>
    <string name="online_invite_success">Invite successful</string>
    <string name="online_invite_chat">Invite conversation</string>
    <string name="online_del_user_end_chat">The user was removed and the session ended</string>
    <string name="online_summary_business_type">Business type</string>
    <string name="online_status_ok">Resolved</string>
    <string name="online_already_mark">Star marked</string>
    <string name="sobot_online_has_zongjie">Summarized</string>
    <string name="online_lahei_long">Permanent blackout</string>
    <string name="online_intelligence_reply">Intelligent reply</string>
</resources>