<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_chat_room_long_only"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_copy_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/online_pop_copy"
        android:textColor="@color/sobot_online_white_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_retract_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/online_pop_retract"
        android:textColor="@color/sobot_online_white_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_smart_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/online_intelligence_reply"
        android:textColor="@color/sobot_online_white_color"
        android:textSize="12sp"
        android:visibility="gone" />
</LinearLayout>