<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tv_online_pop_search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sobot_shape_online_pop_header"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <include layout="@layout/sobot_online_pop_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_marginBottom="20dp"
        android:background="@color/sobot_online_line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/online_reception_kefu"
        android:textColor="@color/sobot_online_common_gray1"
        android:textSize="@dimen/sobot_sp_15" />

    <RadioGroup
        android:id="@+id/rg_online_pop_reception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RadioButton
            android:id="@+id/rb_online_pop_my_reception"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_my_reception"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_all_reception"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_all_reception"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/online_chat_time"
        android:textColor="@color/sobot_online_common_gray1"
        android:textSize="@dimen/sobot_sp_15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_online_pop_start_time"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_shape_hollow_border_normal"
            android:gravity="center"
            android:textColor="@color/sobot_online_common_gray2"
            android:textSize="@dimen/sobot_sp_14" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/sobot_online_common_gray2"
            android:textSize="@dimen/sobot_sp_25" />

        <TextView
            android:id="@+id/tv_online_pop_end_time"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_shape_hollow_border_normal"
            android:gravity="center"
            android:textColor="@color/sobot_online_common_gray2"
            android:textSize="@dimen/sobot_sp_14" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_online_pop_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/online_service_summary"
        android:textColor="@color/sobot_online_common_gray1"
        android:textSize="@dimen/sobot_sp_15"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/rg_online_pop_all_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_online_pop_all_summary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_all"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_already_summary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_status_ok"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_no_summary"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_status_no"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_online_pop_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/online_mark_status"
        android:textColor="@color/sobot_online_common_gray1"
        android:textSize="@dimen/sobot_sp_15" />

    <RadioGroup
        android:id="@+id/rg_online_pop_all_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RadioButton
            android:id="@+id/rb_online_pop_all_mark"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_all"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_already_mark"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_already_mark"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_no_mark"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_no_mark"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_online_pop_handle_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/online_summary_status"
        android:textColor="@color/sobot_online_common_gray1"
        android:textSize="@dimen/sobot_sp_15"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/rg_online_pop_all_handle_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_online_pop_all_handle_status"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_all"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_already_handle_status"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sobot_online_has_zongjie"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />

        <RadioButton
            android:id="@+id/rb_online_pop_no_handle_status"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/sobot_button_rectangle_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/online_no_zongjie"
            android:textColor="@color/sobot_button_rectangle_textcolor_selector"
            android:textSize="@dimen/sobot_sp_14" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_sobot_online_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sobot_shape_online_btn_border_select"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingTop="14dp"
        android:paddingRight="30dp"
        android:paddingBottom="14dp"
        android:text="@string/online_save"
        android:textColor="@color/sobot_online_white_color"
        android:textSize="@dimen/sobot_sp_16" />
</LinearLayout>