<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sobot_online_app_bg_color">

    <TextView
        android:id="@+id/tv_online_reception_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="13dp"
        android:paddingBottom="15dp"
        android:text="@string/sobot_reception_on"
        android:textColor="@color/sobot_online_color"
        android:textSize="@dimen/sobot_sp_14"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_online_reception_screen_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/tv_online_reception_on"
        android:paddingTop="13dp"
        android:paddingBottom="15dp"
        android:text="@string/sobot_screen_on"
        android:textColor="@color/sobot_online_common_gray2"
        android:textSize="@dimen/sobot_sp_14"
        android:visibility="gone" />

    <View
        android:id="@+id/v_online_reception_split"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_below="@id/tv_online_reception_on"
        android:background="@color/sobot_online_line_color" />

    <TextView
        android:id="@+id/tv_online_search_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_online_reception_split"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/sobot_shape_online_gray_bg"
        android:drawableLeft="@drawable/search_online_search_icon"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:visibility="gone"
        android:paddingBottom="10dp"
        android:text="@string/sobot_search"
        android:textColor="@color/sobot_online_common_gray3"
        android:textSize="@dimen/sobot_sp_14" />

    <com.sobot.online.weight.recyclerview.swipemenu.SobotSwipeMenuRecyclerView
        android:id="@+id/ssmrv_online_reception"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_online_search_context">

    </com.sobot.online.weight.recyclerview.swipemenu.SobotSwipeMenuRecyclerView>

    <com.sobot.online.weight.recyclerview.swipemenu.SobotSwipeMenuRecyclerView
        android:id="@+id/ssmrv_online_paidui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_online_search_context"
        android:visibility="gone">

    </com.sobot.online.weight.recyclerview.swipemenu.SobotSwipeMenuRecyclerView>

</RelativeLayout>